--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <properties>
+<sonar.organization>linish2020</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
 
     <organization>
         <name>GeyserMC</name>
